@@ -1,3 +1,8 @@
+2013-01-08  Alan Modra  <amodra@gmail.com>
+
+	* Makefile.am (ALL_EMULATION_SOURCES): Correct eavrxmega entries.
+	* Makefile.in: Regenerate.
+
 2013-01-07  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* lexsup.c (ld_options): Add fuse-ld= for GCC linker option
